--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     
     
-    <a href="Master_Resume (2).pdf" class="gradient-btn">Resume</a>
+    <a href="Master_Resume.pdf" class="gradient-btn">Resume</a>
 
   </header>
 
