--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
         <a href="#projects">Projects</a>
       </li>
       <li>
-        <a href="#contact">contact</a>
+        <a href="#contact">Contact</a>
       </li>
     </ul>
 
