--- a/Know-more.html
+++ b/Know-more.html
@@ -12,7 +12,7 @@
 
         <div class="home-content">
           <h1>Hi, It's <span>Jagdeesh</span></h1>
-          <h3>I'm a <span>Student</span></h3>
+          <h3>I'm a <span>Weightlifter</span></h3>
           <p> Hello! I'm a 3rd-year undergraduate student at IIT Kanpur, majoring in Mechanical Engineering. I'm also a dedicated Weightlifting athlete and proudly serve as the Captain of the Institute's Weightlifting team ans its My  Personal Page for Weightlifting and all....</p>
     
           <div class="social-icons">
